Correct image layout on small screens

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -322,6 +322,7 @@ html {
                 left: -$content-padding;
                 right: -$content-padding;
             }
+            text-align: center;
         }
 
         @media #{$responsive-medium-large} {
